--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "game-buddy-app",
   "version": "0.1.0",
-  "private": true,
+  "private": true, 
+  "homepage": "https://webgdesigns.com/gamebuddy",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -41,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  
   }
 }
